test/Dialect/Struct/struct_params_fail.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics %s

module attributes {llzk.lang} {
  struct.def @ComponentA1<[@A, @B]> {
    function.def @compute() -> !struct.type<@ComponentA1<[@A, @B]>> {
      %self = struct.new : !struct.type<@ComponentA1<[@A, @B]>>
      function.return %self : !struct.type<@ComponentA1<[@A, @B]>>
    }
    function.def @constrain(%self: !struct.type<@ComponentA1<[@A, @B]>>) { function.return }
  }

  struct.def @ComponentA2<[@C]> {
    // expected-error@+1 {{'struct.type' type has 3 parameters but "ComponentA1" expects 2}}
    struct.member @f3 : !struct.type<@ComponentA1<[5, @C, 6]>>

    function.def @compute() -> !struct.type<@ComponentA2<[@C]>> {
      %self = struct.new : !struct.type<@ComponentA2<[@C]>>
      function.return %self : !struct.type<@ComponentA2<[@C]>>
    }

    function.def @constrain(%self: !struct.type<@ComponentA2<[@C]>>) { function.return }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @ComponentB1<[@A, @B]> {
    function.def @compute() -> !struct.type<@ComponentB1<[@A, @B]>> {
      %self = struct.new : !struct.type<@ComponentB1<[@A, @B]>>
      function.return %self : !struct.type<@ComponentB1<[@A, @B]>>
    }
    function.def @constrain(%self: !struct.type<@ComponentB1<[@A, @B]>>) { function.return }
  }

  struct.def @ComponentB2 {
    struct.member @f3 : !struct.type<@ComponentB1<[5,5]>>

    function.def @compute() -> !struct.type<@ComponentB2> {
      %self = struct.new : !struct.type<@ComponentB2>
      function.return %self : !struct.type<@ComponentB2>
    }

    function.def @constrain(%self: !struct.type<@ComponentB2>) {
      // expected-error@+1 {{'struct.readm' op has wrong type; expected '!struct.type<@ComponentB1<[5, 5]>>', got '!struct.type<@ComponentB1<[5, 6]>>'}}
      %b = struct.readm %self[@f3] : !struct.type<@ComponentB2>, !struct.type<@ComponentB1<[5,6]>>
      function.return
    }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @ComponentC1<[@A, @B]> {
    function.def @compute() -> !struct.type<@ComponentC1<[@A, @B]>> {
      %self = struct.new : !struct.type<@ComponentC1<[@A, @B]>>
      function.return %self : !struct.type<@ComponentC1<[@A, @B]>>
    }
    function.def @constrain(%self: !struct.type<@ComponentC1<[@A, @B]>>) { function.return }
  }

  struct.def @ComponentC2 {
    struct.member @f3 : !struct.type<@ComponentC1<[5,5]>>

    function.def @compute() -> !struct.type<@ComponentC2> {
      %self = struct.new : !struct.type<@ComponentC2>
      function.return %self : !struct.type<@ComponentC2>
    }

    function.def @constrain(%self: !struct.type<@ComponentC2>) {
      // expected-error@+1 {{'struct.readm' op has wrong type; expected '!struct.type<@ComponentC1<[5, 5]>>', got '!struct.type<@ComponentC1<[5, 6, 4]>>'}}
      %b = struct.readm %self[@f3] : !struct.type<@ComponentC2>, !struct.type<@ComponentC1<[5,6,4]>>
      function.return
    }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @ComponentD1<[@A, @B]> {
    function.def @compute() -> !struct.type<@ComponentD1<[@A, @B]>> {
      %self = struct.new : !struct.type<@ComponentD1<[@A, @B]>>
      function.return %self : !struct.type<@ComponentD1<[@A, @B]>>
    }
    function.def @constrain(%self: !struct.type<@ComponentD1<[@A, @B]>>) { function.return }
  }

  struct.def @ComponentD2 {
    struct.member @f3 : !struct.type<@ComponentD1<[5,5]>>

    function.def @compute() -> !struct.type<@ComponentD2> {
      %self = struct.new : !struct.type<@ComponentD2>
      function.return %self : !struct.type<@ComponentD2>
    }

    function.def @constrain(%self: !struct.type<@ComponentD2>) {
      // expected-error@+1 {{'struct.readm' op has wrong type; expected '!struct.type<@ComponentD1<[5, 5]>>', got '!struct.type<@ComponentD1<[5]>>'}}
      %b = struct.readm %self[@f3] : !struct.type<@ComponentD2>, !struct.type<@ComponentD1<[5]>>
      function.return
    }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @ComponentE1<[@A, @B]> {
    function.def @compute() -> !struct.type<@ComponentE1<[@A, @B]>> {
      %self = struct.new : !struct.type<@ComponentE1<[@A, @B]>>
      function.return %self : !struct.type<@ComponentE1<[@A, @B]>>
    }
    function.def @constrain(%self: !struct.type<@ComponentE1<[@A, @B]>>) { function.return }
  }

  struct.def @ComponentE2<[@C]> {
    struct.member @f3 : !struct.type<@ComponentE1<[5, @C]>>

    function.def @compute() -> !struct.type<@ComponentE2<[@C]>> {
      %self = struct.new : !struct.type<@ComponentE2<[@C]>>
      function.return %self : !struct.type<@ComponentE2<[@C]>>
    }

    function.def @constrain(%self: !struct.type<@ComponentE2<[@C]>>) {
      // expected-note@+1 {{prior use here}}
      %b = struct.readm %self[@f3] : !struct.type<@ComponentE2<[@C]>>, !struct.type<@ComponentE1<[5, @C]>>
      // expected-error@+1 {{use of value '%b' expects different type than prior uses: '!struct.type<@ComponentE1<[5, @C, 4]>>' vs '!struct.type<@ComponentE1<[5, @C]>>'}}
      function.call @ComponentE1::@constrain(%b) : (!struct.type<@ComponentE1<[5,@C,4]>>) -> ()
      function.return
    }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @ComponentF1<[@A, @B]> {
    function.def @compute() -> !struct.type<@ComponentF1<[@A, @B]>> {
      %self = struct.new : !struct.type<@ComponentF1<[@A, @B]>>
      function.return %self : !struct.type<@ComponentF1<[@A, @B]>>
    }
    function.def @constrain(%self: !struct.type<@ComponentF1<[@A, @B]>>) { function.return }
  }

  struct.def @ComponentF2<[@C]> {
    // expected-error@+1 {{'struct.type' type has 3 parameters but "ComponentF1" expects 2}}
    function.def @compute(%0: !struct.type<@ComponentF1<[5,@C,88]>>) -> !struct.type<@ComponentF2<[@C]>> {
      %self = struct.new : !struct.type<@ComponentF2<[@C]>>
      function.return %self : !struct.type<@ComponentF2<[@C]>>
    }

    function.def @constrain(%self: !struct.type<@ComponentF2<[@C]>>, %0: !struct.type<@ComponentF1<[5,@C,88]>>) {
      function.return
    }
  }
}
// -----
// No parameters used to reference self type within component
module attributes {llzk.lang} {
  struct.def @ComponentG<[@A, @B]> { // expected-note {{should be type of this 'struct.def'}}
    // expected-error@+1 {{'function.def' op "@compute" must use type of its ancestor 'struct.def' "@ComponentG<[@A, @B]>" as return type}}
    function.def @compute() -> !struct.type<@ComponentG> {
      %self = struct.new : !struct.type<@ComponentG>
      function.return %self : !struct.type<@ComponentG>
    }
    function.def @constrain(%self: !struct.type<@ComponentG>) { function.return }
  }
}
// -----
// Fewer parameters used to reference self type within component
module attributes {llzk.lang} {
  struct.def @ComponentH<[@A, @B]> { // expected-note {{should be type of this 'struct.def'}}
    // expected-error@+1 {{'function.def' op "@compute" must use type of its ancestor 'struct.def' "@ComponentH<[@A, @B]>" as return type}}
    function.def @compute() -> !struct.type<@ComponentH<[@A]>> {
      %self = struct.new : !struct.type<@ComponentH<[@A]>>
      function.return %self : !struct.type<@ComponentH<[@A]>>
    }
    function.def @constrain(%self: !struct.type<@ComponentH<[@A]>>) { function.return }
  }
}
// -----
// More parameters used to reference self type within component
module attributes {llzk.lang} {
  struct.def @ComponentI<[@A, @B]> { // expected-note {{should be type of this 'struct.def'}}
    // expected-error@+1 {{'function.def' op "@compute" must use type of its ancestor 'struct.def' "@ComponentI<[@A, @B]>" as return type}}
    function.def @compute() -> !struct.type<@ComponentI<[@A, @B, @B]>> {
      %self = struct.new : !struct.type<@ComponentI<[@A, @B, @B]>>
      function.return %self : !struct.type<@ComponentI<[@A, @B, @B]>>
    }
    function.def @constrain(%self: !struct.type<@ComponentI<[@A, @B, @B]>>) { function.return }
  }
}
// -----
// Different parameters used to reference self type within component
module attributes {llzk.lang} {
  struct.def @ComponentJ<[@A, @B]> { // expected-note {{should be type of this 'struct.def'}}
    // expected-error@+1 {{'function.def' op "@compute" must use type of its ancestor 'struct.def' "@ComponentJ<[@A, @B]>" as return type}}
    function.def @compute() -> !struct.type<@ComponentJ<[@B, @A]>> {
      %self = struct.new : !struct.type<@ComponentJ<[@B, @A]>>
      function.return %self : !struct.type<@ComponentJ<[@B, @A]>>
    }
    function.def @constrain(%self: !struct.type<@ComponentJ<[@B, @A]>>) { function.return }
  }
}
// -----
// Unknown parameters used to reference self type within component
module attributes {llzk.lang} {
  struct.def @ComponentK<[@A, @B]> {
    // expected-error@+2 {{'function.def' op references unknown symbol "@C"}}
    // expected-error@+1 {{'function.def' op references unknown symbol "@D"}}
    function.def @compute() -> !struct.type<@ComponentK<[@C, @D]>> {
      %self = struct.new : !struct.type<@ComponentK<[@C, @D]>>
      function.return %self : !struct.type<@ComponentK<[@C, @D]>>
    }
    function.def @constrain(%self: !struct.type<@ComponentK<[@C, @D]>>) { function.return }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @ComponentL1<[@Z]> { // expected-note {{type parameters must unify with parameters defined here}}
    function.def @compute() -> !struct.type<@ComponentL1<[@Z]>> {
      %self = struct.new : !struct.type<@ComponentL1<[@Z]>>
      function.return %self : !struct.type<@ComponentL1<[@Z]>>
    }
    function.def @constrain(%self: !struct.type<@ComponentL1<[@Z]>>)  { function.return }
  }
  struct.def @ComponentL2 {
    // expected-error@+1 {{Cannot unify parameters of type '!struct.type<@ComponentL1>' with parameters of 'struct.def' "@ComponentL1<[@Z]>"}}
    struct.member @f : !struct.type<@ComponentL1>

    function.def @compute() -> !struct.type<@ComponentL2> {
      %self = struct.new : !struct.type<@ComponentL2>
      function.return %self : !struct.type<@ComponentL2>
    }
    function.def @constrain(%self: !struct.type<@ComponentL2>)  { function.return }
  }
}
// -----
module attributes {llzk.lang} {
  module @a {
    struct.def @ComponentM1<[@Z]> { // expected-note {{type parameters must unify with parameters defined here}}
      function.def @compute() -> !struct.type<@a::@ComponentM1<[@Z]>> {
        %self = struct.new : !struct.type<@a::@ComponentM1<[@Z]>>
        function.return %self : !struct.type<@a::@ComponentM1<[@Z]>>
      }
      function.def @constrain(%self: !struct.type<@a::@ComponentM1<[@Z]>>)  { function.return }
    }
  }
  module @b {
    struct.def @ComponentM2 {
      // expected-error@+1 {{Cannot unify parameters of type '!struct.type<@a::@ComponentM1>' with parameters of 'struct.def' "@a::@ComponentM1<[@Z]>"}}
      struct.member @f : !struct.type<@a::@ComponentM1>

      function.def @compute() -> !struct.type<@b::@ComponentM2> {
        %self = struct.new : !struct.type<@b::@ComponentM2>
        function.return %self : !struct.type<@b::@ComponentM2>
      }
      function.def @constrain(%self: !struct.type<@b::@ComponentM2>)  { function.return }
    }
  }
}
// -----
module attributes {llzk.lang} {
  module @a {
    struct.def @ComponentN1 {
      function.def @compute() -> !struct.type<@a::@ComponentN1> {
        %self = struct.new : !struct.type<@a::@ComponentN1>
        function.return %self : !struct.type<@a::@ComponentN1>
      }
      function.def @constrain(%self: !struct.type<@a::@ComponentN1>)  { function.return }
    }
  }
  module @b {
    struct.def @ComponentN2<[@A]> {
      // expected-error@+1 {{'struct.type' type has 2 parameters but "ComponentN1" expects 0}}
      struct.member @f : !struct.type<@a::@ComponentN1<[@A, @A]>>

      function.def @compute() -> !struct.type<@b::@ComponentN2<[@A]>> {
        %self = struct.new : !struct.type<@b::@ComponentN2<[@A]>>
        function.return %self : !struct.type<@b::@ComponentN2<[@A]>>
      }
      function.def @constrain(%self: !struct.type<@b::@ComponentN2<[@A]>>)  { function.return }
    }
  }
}
// -----
module attributes {llzk.lang} {
  module @a {
    struct.def @ComponentO1<[@Z]> {
      function.def @compute() -> !struct.type<@a::@ComponentO1<[@Z]>> {
        %self = struct.new : !struct.type<@a::@ComponentO1<[@Z]>>
        function.return %self : !struct.type<@a::@ComponentO1<[@Z]>>
      }
      function.def @constrain(%self: !struct.type<@a::@ComponentO1<[@Z]>>)  { function.return }
    }
  }
  module @b {
    struct.def @ComponentO2 {
      // expected-error@+1 {{'struct.member' op references unknown symbol "@A"}}
      struct.member @f : !struct.type<@a::@ComponentO1<[@A]>>

      function.def @compute() -> !struct.type<@b::@ComponentO2> {
        %self = struct.new : !struct.type<@b::@ComponentO2>
        function.return %self : !struct.type<@b::@ComponentO2>
      }
      function.def @constrain(%self: !struct.type<@b::@ComponentO2>)  { function.return }
    }
  }
}
// -----
module attributes {llzk.lang} {
  module @a {
    struct.def @ComponentP1<[@Z]> {
      function.def @compute() -> !struct.type<@a::@ComponentP1<[@Z]>> {
        %self = struct.new : !struct.type<@a::@ComponentP1<[@Z]>>
        function.return %self : !struct.type<@a::@ComponentP1<[@Z]>>
      }
      function.def @constrain(%self: !struct.type<@a::@ComponentP1<[@Z]>>)  { function.return }
    }
  }
  module @b {
    struct.def @ComponentP2 {
      // expected-error@+1 {{'struct.member' op references unknown symbol "@constrain"}}
      struct.member @f : !struct.type<@a::@ComponentP1<[@constrain]>>

      function.def @compute() -> !struct.type<@b::@ComponentP2> {
        %self = struct.new : !struct.type<@b::@ComponentP2>
        function.return %self : !struct.type<@b::@ComponentP2>
      }
      function.def @constrain(%self: !struct.type<@b::@ComponentP2>)  { function.return }
    }
  }
}
// -----
module attributes {llzk.lang} {
  module @a {
    struct.def @ComponentQ1<[@Z]> {
      function.def @compute() -> !struct.type<@a::@ComponentQ1<[@Z]>> {
        %self = struct.new : !struct.type<@a::@ComponentQ1<[@Z]>>
        function.return %self : !struct.type<@a::@ComponentQ1<[@Z]>>
      }
      function.def @constrain(%self: !struct.type<@a::@ComponentQ1<[@Z]>>)  { function.return }
    }
  }
  module @b {
    struct.def @ComponentQ2 {
      // expected-error@+1 {{ref "@b::@ComponentQ2::@constrain" in type '!struct.type<@a::@ComponentQ1<[@b::@ComponentQ2::@constrain]>>' refers to a 'function.def' which is not allowed}}
      struct.member @f : !struct.type<@a::@ComponentQ1<[@b::@ComponentQ2::@constrain]>>

      function.def @compute() -> !struct.type<@b::@ComponentQ2> {
        %self = struct.new : !struct.type<@b::@ComponentQ2>
        function.return %self : !struct.type<@b::@ComponentQ2>
      }
      function.def @constrain(%self: !struct.type<@b::@ComponentQ2>)  { function.return }
    }
  }
}
// -----
module attributes {llzk.lang} {
  module @a {
    struct.def @ComponentR1<[@Z]> {
      function.def @compute() -> !struct.type<@a::@ComponentR1<[@Z]>> {
        %self = struct.new : !struct.type<@a::@ComponentR1<[@Z]>>
        function.return %self : !struct.type<@a::@ComponentR1<[@Z]>>
      }
      function.def @constrain(%self: !struct.type<@a::@ComponentR1<[@Z]>>)  { function.return }
    }
  }
  module @b {
    struct.def @ComponentR2 {
      // expected-error@+1 {{ref "@b" in type '!struct.type<@a::@ComponentR1<[@b]>>' refers to a 'builtin.module' which is not allowed}}
      struct.member @f : !struct.type<@a::@ComponentR1<[@b]>>

      function.def @compute() -> !struct.type<@b::@ComponentR2> {
        %self = struct.new : !struct.type<@b::@ComponentR2>
        function.return %self : !struct.type<@b::@ComponentR2>
      }
      function.def @constrain(%self: !struct.type<@b::@ComponentR2>)  { function.return }
    }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @ComponentS1<[@Z]> {
    function.def @compute() -> !struct.type<@ComponentS1<[@Z]>> {
      %self = struct.new : !struct.type<@ComponentS1<[@Z]>>
      function.return %self : !struct.type<@ComponentS1<[@Z]>>
    }
    function.def @constrain(%self: !struct.type<@ComponentS1<[@Z]>>)  { function.return }
  }
  struct.def @ComponentS2 {
    // expected-error@+1 {{ref "@ComponentS2" in type '!struct.type<@ComponentS1<[@ComponentS2]>>' refers to a 'struct.def' which is not allowed}}
    struct.member @f : !struct.type<@ComponentS1<[@ComponentS2]>>

    function.def @compute() -> !struct.type<@ComponentS2> {
      %self = struct.new : !struct.type<@ComponentS2>
      function.return %self : !struct.type<@ComponentS2>
    }
    function.def @constrain(%self: !struct.type<@ComponentS2>)  { function.return }
  }
}
// -----
module attributes {llzk.lang} {
  function.def private @some_function() -> ()
  struct.def @ComponentT1<[@Z]> {
    function.def @compute() -> !struct.type<@ComponentT1<[@Z]>> {
      %self = struct.new : !struct.type<@ComponentT1<[@Z]>>
      function.return %self : !struct.type<@ComponentT1<[@Z]>>
    }
    function.def @constrain(%self: !struct.type<@ComponentT1<[@Z]>>)  { function.return }
  }
  struct.def @ComponentT2 {
    // expected-error@+1 {{ref "@some_function" in type '!struct.type<@ComponentT1<[@some_function]>>' refers to a 'function.def' which is not allowed}}
    struct.member @f : !struct.type<@ComponentT1<[@some_function]>>

    function.def @compute() -> !struct.type<@ComponentT2> {
      %self = struct.new : !struct.type<@ComponentT2>
      function.return %self : !struct.type<@ComponentT2>
    }
    function.def @constrain(%self: !struct.type<@ComponentT2>)  { function.return }
  }
}
// -----
module attributes {llzk.lang} {
  module @a {
    struct.def @ComponentU1<[@Z]> {
      function.def @compute() -> !struct.type<@a::@ComponentU1<[@Z]>> {
        %self = struct.new : !struct.type<@a::@ComponentU1<[@Z]>>
        function.return %self : !struct.type<@a::@ComponentU1<[@Z]>>
      }
      function.def @constrain(%self: !struct.type<@a::@ComponentU1<[@Z]>>)  { function.return }
    }
  }
  // expected-error@+1 {{'function.def' op references unknown symbol "@D"}}
  function.def @fun3(%0: !struct.type<@a::@ComponentU1<[@D]>>) -> !struct.type<@a::@ComponentU1<[@D]>> {
    function.return %0 : !struct.type<@a::@ComponentU1<[@D]>>
  }
}
// -----
module attributes {llzk.lang} {
  // expected-error@+1 {{'struct.def' op has more than one parameter named "@A"}}
  struct.def @ComponentW<[@A, @A]> {
    function.def @compute() -> !struct.type<@ComponentW<[@A, @A]>> {
      %self = struct.new : !struct.type<@ComponentW<[@A, @A]>>
      function.return %self : !struct.type<@ComponentW<[@A, @A]>>
    }
    function.def @constrain(%self: !struct.type<@ComponentW<[@A, @A]>>) { function.return }
  }
}
// -----
module attributes {llzk.lang} {
  function.def @F() { function.return } // expected-note {{symbol already defined here}}
  // expected-error@+1 {{'struct.def' op parameter name "@F" conflicts with an existing symbol}}
  struct.def @ComponentX<[@F]> {
    function.def @compute() -> !struct.type<@ComponentX<[@F]>> {
      %self = struct.new : !struct.type<@ComponentX<[@F]>>
      function.return %self : !struct.type<@ComponentX<[@F]>>
    }
    function.def @constrain(%self: !struct.type<@ComponentX<[@F]>>) { function.return }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @BadParamTypeA<[@C]> {
    function.def @compute() -> !struct.type<@BadParamTypeA<[@C]>> {
      %self = struct.new : !struct.type<@BadParamTypeA<[@C]>>
      function.return %self : !struct.type<@BadParamTypeA<[@C]>>
    }

    function.def @constrain(%self: !struct.type<@BadParamTypeA<[@C]>>) {
      function.return
    }
  }
  struct.def @BadParamTypeB {
    // expected-error@+1 {{expected a valid LLZK type but found 'f32'}}
    struct.member @f3 : !struct.type<@BadParamTypeA<[f32]>>

    function.def @compute() -> !struct.type<@BadParamTypeB> {
      %self = struct.new : !struct.type<@BadParamTypeB>
      function.return %self : !struct.type<@BadParamTypeB>
    }

    function.def @constrain(%self: !struct.type<@BadParamTypeB>) {
      function.return
    }
  }
}
// -----
module attributes {llzk.lang} {
  struct.def @DeepInvalidArrayTypeA<[@C]> {
    function.def @compute() -> !struct.type<@DeepInvalidArrayTypeA<[@C]>> {
      %self = struct.new : !struct.type<@DeepInvalidArrayTypeA<[@C]>>
      function.return %self : !struct.type<@DeepInvalidArrayTypeA<[@C]>>
    }

    function.def @constrain(%self: !struct.type<@DeepInvalidArrayTypeA<[@C]>>) {
      function.return
    }
  }

  function.def private @in_return_deep() ->
    !array.type<2 x
      !struct.type<@DeepInvalidArrayTypeA<[
        !array.type<2 x
          !struct.type<@DeepInvalidArrayTypeA<[
            !struct.type<@DeepInvalidArrayTypeA<[
              !array.type<2 x !array.type<4 x i1>> // expected-error {{'array.type' element type cannot be 'array.type'}}
            ]>> // expected-error {{failed to parse struct parameters}}
          ]>> // expected-error {{failed to parse struct parameters}}
        > // expected-error {{failed to parse LLZK_ArrayType parameter 'elementType' which is to be a `::mlir::Type`}}
      ]>> // expected-error {{failed to parse struct parameters}}
    > // expected-error {{failed to parse LLZK_ArrayType parameter 'elementType' which is to be a `::mlir::Type`}}
}

// -----

#map = affine_map<(i) -> (i, 2)>
module attributes {llzk.lang} {
  // This would also trigger {{'struct.def' op attribute 'const_params' failed to satisfy constraint: flat symbol ref array attribute}},
  // but the below error fires first.
  struct.def @Foo<[@N, @P, #map]> {
    // expected-error@+1 {{AffineMapAttr must yield a single result, but found 2 results}}
    function.def @compute() -> !struct.type<@Foo<[@N, @P, #map]>> {
      %self = struct.new : !struct.type<@Foo<[@N, @P, #map]>>
      function.return %self : !struct.type<@Foo<[@N, @P, #map]>>
    }

    function.def @constrain(%self: !struct.type<@Foo<[@N, @P, #map]>>) {
      function.return
    }
  }
}

// -----

#map = affine_map<(i) -> ()>
module attributes {llzk.lang} {
  struct.def @Foo<[@N, @P, @A]> {
    function.def @compute() -> !struct.type<@Foo<[@N, @P, @A]>> {
      %self = struct.new : !struct.type<@Foo<[@N, @P, @A]>>
      function.return %self : !struct.type<@Foo<[@N, @P, @A]>>
    }

    function.def @constrain(%self: !struct.type<@Foo<[@N, @P, @A]>>) {
      function.return
    }
  }

  struct.def @Bar<[@N, @P]> {
     // expected-error@+1 {{AffineMapAttr must yield a single result, but found 0 results}}
    struct.member @foo: !struct.type<@Foo<[@N, @P, #map]>>

    function.def @compute() -> !struct.type<@Bar<[@N, @P]>> {
      %self = struct.new : !struct.type<@Bar<[@N, @P]>>
      function.return %self : !struct.type<@Bar<[@N, @P]>>
    }

    function.def @constrain(%self: !struct.type<@Bar<[@N, @P]>>) {
      function.return
    }
  }
}
